[project]
name = "inventory-management-system-api"
description = "Python microservice providing an API for the Inventory Management System."
readme = "README.md"
requires-python = ">=3.13"
version = "4.0.1"

dependencies = [
    "cryptography>=48.0.0",
    "fastapi[all]>=0.136.1",
    "PyJWT>=2.12.1",
    "pymongo>=4.17.0",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]

[project.urls]
"Repository" = "https://github.com/ral-facilities/inventory-management-system-api"

[tool.uv.sources]
inventory-management-system-api = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[project.scripts]
"ims" = "inventory_management_system_api.cli.main:main"

[dependency-groups]
code-analysis = [{ include-group = "test" }, "black>=26.3.1", "pylint>=4.0.5"]

test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
]

scripts = ["faker>=40.11.1"]

dev = [
    { include-group = "code-analysis" },
    { include-group = "test" },
    { include-group = "scripts" },
]

[tool.coverage.run]
omit = [
    # Exclude test code from coverage measurement
    "test/*",
    # Exclude migration scripts from coverage measurement
    "inventory_management_system_api/migrations/scripts/*",
    # Exclude routers from coverage measurement as they are tested in the e2e tests
    "inventory_management_system_api/routers/v1/*",
]

[tool.setuptools.packages.find]
include = [
    "inventory_management_system_api",
    "inventory_management_system_api*",
]
